Atualiza instrucoes de como executar aplicacao